--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Namaste React</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+
+    </div>
     <script>
         const heading = document.createElement("h1");
-        heading.innerHTML = "Hello world from JavaScript!"
+        heading.innerHTML = "Hello World";
 
-        const root = document.getElementById('root');
+        const root = document.getElementById("root");
         root.appendChild(heading);
     </script>
 </body>
